sap/5.1/modules/ROOT/pages/sap-connector-studio.adoc
= SAP Connector Studio Configuration - Mule 4

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files. First install the SAP Java Connector (JCo) libraries that you obtain from SAP and then you can create an app containing
one or more SAP Connector operations. Studio enables you to create an app and access the app from a browser.

To add and configure SAP connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-input-source,Configure an input source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<configure-other-fields,Configure the other connector fields>>.

When you run the connector, you can view the app log to check for problems, as described in <<view-app-log,View the App Log>>.

== Add SAP Connector to Your Project Using Exchange

. In Studio, create a Mule project.
. Click the Exchange icon in the upper-left of the Studio task bar.
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for "SAP".
. Select SAP Connector, and click *Add to project*.
. Follow the prompts to install SAP Connector.

== Add SAP Connector to Your Project in Studio

. In Studio, create a Mule project.
. In the *Mule Palette*, click *Search in Exchange*.
. In *Add Modules to Project*, type "SAP" in the search field.
. In *Available modules*, select *SAP Connector - Mule 4*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

== Select a Source Operation

. In Anypoint Studio, click the *Mule Palette* and type "SAP".
. Choose an operation. +
If you want your app to start when an object is sent from SAP, choose either of the following operations and drag the operation to the *Source* area of the Studio canvas.
+
* *Document source* listens for a change to an IDoc. When an IDoc changes, your app executes
* *Function source* listens for a change to a SAP function module. When the targeted function module changes, your app executes.
+
See the xref:sap-connector-reference.adoc[SAP Connector Reference] for field values.
If you chose the *Document source* or *Function source* operation, proceed to the next section to install the SAP libraries.
. Alternatively, you can configure an input source for this connector such as an *HTTP Listener*, or *Scheduler*, and drag the operation to the Studio canvas. +
An HTTP Listener enables you to start your app from a browser. A Scheduler starts your app at a specific time.
. Install the SAP libraries.

== Install SAP Libraries

To use SAP libraries in your Mule project, you must first download the libraries to your
computer. You can use the three libraries in Anypoint Studio directly, without conversion. You must have an SAP ID to download the libraries.

The file types for each library depend on your operating system:

[%header%autowidth.spread]
|===
| OS | File Types
| Windows a| * sapidoc3.jar
* sapjco3.jar
* sapjco3.dll

| Mac OS a| * sapidoc3.jar
* sapjco3.jar
* libsapjco3.jnilib

| Linux a| * sapidoc3.jar
* sapjco3.jar
* libsapjco3.so
|===

[NOTE]
SAP Connector supports only version 3.0.x SAP JCo libraries.

After you install the libraries, you can customize the global element properties and test the connection.

== Configure the Libraries in Anypoint Studio

After installing the SAP Connector in Studio and adding the connector to your Mule project, configure the libraries.

. Double-click the connector in the flow.
. Click the plus sign (*+*) on the right of the *Connector Configuration* field. +
This screen appears:
+
image::sap-connector-configuration-01.png[This image shows the fields for global element properties.]

=== Install the IDOC Library

. Click *Add Dependency*.
. Click *Install*.
+
image::sap-connector-configuration-02.png[This image shows the fields for Maven dependency.]
+
. In the *Install* menu, click *Browse* to locate the library file.
. Specify a unique group ID, artifact ID, and version.
+
image::sap-connector-configuration-02-in.png[This image shows the fields for installing a file into the local repository.]
+
. Click *Finish* or, if you want to cancel, click *Remove Dependency*.
+
image::sap-connector-configuration-02-finish.png[This image shows the fields for Maven dependency.]

=== Install the JCO Library

. Click *Add Dependency*.
. Click *Install*.
+
image::sap-connector-configuration-02.png[This image shows the fields for picking a Maven dependency.]
+
. In the *Install* menu, click *Browse* to locate the library file.
. Specify a unique group ID, artifact ID, and version.
+
image::sap-connector-configuration-03-in.png[This image shows the fields for installing a file into the local repository.]
+
. Click *Finish* or, if you want to cancel, click *Remove Dependency*.
+
image::sap-connector-configuration-03-finish.png[The image shows the fields for removing a dependency.]

=== Install the JCO Native Library

. Click *Add Dependency*.
. Click *Install*.
+
image::sap-connector-configuration-02.png[This image shows the fields for Maven dependency.]
+
. In the *Install* menu, click *Browse* to locate the library file.
+
On MacOS, starting with JCO version 3.1.2, the native library extension was changed from `jnilib` to `dylib`. Anypoint Studio versions 7.0 through 7.6 have a limitation on selecting the `dylib` file type. 
+
.. After installing the library from the local machine:
.. Navigate to the bottom of the *Shared Folder* window. 
.. Select *Any*, and then select the `dylib` native library. 
.. In the *Install file into local repository* window, enter values for the following fields:
* *Group ID*
* *Artifact ID*
* *Version*  
+
. Specify a unique group ID, artifact ID, and version.
+
image::sap-connector-configuration-04-in.png[This image shows the fields for installing a file into the local repository.]
+
. Click *Finish* or, if you want to cancel, click *Remove Dependency*.
+
image::sap-connector-configuration-04-finish.png[The image shows the fields for picking a Maven dependency.]

When you are finished installing the libraries, the configuration screen appears as follows with green check marks for each successfully installed library:

image::sap-connector-libraries-installed.png[This image shows the fields for global element properties.]

== Test the Connection

. Sign into your SAP login to get the information you need to configure the remaining *Global Element Properties* fields as described in <<gepparms,Configure in Studio>>.
. Click *Test Connection* to ensure that you have the correct login information.

== Configure the Connector

If you need more than one SAP Connector instance in your Mule project, you can create a global SAP element. The SAP Connector object holds the configuration properties that allow you to connect to the SAP server.

To create a configuration for an SAP Connector, complete the following steps:

. Go to *Global Elements* section and click *Create*.
. Select either *SAP Inbound* or *SAP Outbound* in the *Connector Configuration* section.
. In the *General* tab pane, enter the required parameters for defining an SAP connection, which your SAP system administrator can supply.

The SAP global element properties allow you to define connection properties as well as to add the required SAP dependencies to your project.

For ease of use, SAP Connector shows only the most common properties as connector parameters. To configure a property that is not listed in the *Properties* panel, see the xref:sap-connector-config-topics.adoc[Define Extended Properties] topic.

The minimum required attributes to define are:

[[gepparms]]
[%header,cols="30s,70a"]
|===
|Field |Description
|Application Server Host | SAP endpoint
|Username | Username of an authorized SAP user
|Password | Password credential of an authorized SAP user
|System Number | System number used to connect to the SAP system
|Client| The SAP client ID (usually a number) used to connect to the SAP system
|Login Language | The language to use for the SAP connection. For example, `EN` for English.
|===

As a best practice, use property placeholder syntax to load the credentials in a more simple and reusable way.

Click *Test Connection* to verify that the connection to the SAP instance is correct. If the credentials are correct you should see the `Test Connection Successful` message.

== Next

After configuring this connector in Studio,
see the xref:sap-connector-config-topics.adoc[Additional Configuration Information] topic
for more configuration topics.

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
